# annollm

backend/: .env.example  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/api/: utils.py
backend/app/api/endpoints/: health_check.py
backend/app/core/: config.py
backend/src/annollm/: __init__.py
backend/src/api/: __init__.py
frontend/: bun.lockb  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  theme.ts
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/Header/: index.tsx
frontend/src/app/(main)/Sidebar/: index.tsx
frontend/src/app/(main)/Sidebar/CreateProjectButton/: index.tsx
frontend/src/components/common/Logo/: index.tsx
frontend/src/components/index/: Content.tsx
frontend/src/components/index/AnnotationForm/: index.tsx  validators.ts
frontend/src/components/index/DatasetTable/: index.tsx
frontend/src/components/index/DatasetTable/JSONDownloadButton/: index.tsx
frontend/src/components/index/Sidebar/: index.tsx
frontend/src/components/index/Sidebar/CreateProjectButton/ModalContent/: index.tsx
frontend/src/components/index/common/atoms/: mocks.ts
frontend/src/lib/: $path.ts  fetcher.ts
frontend/src/lib/hooks/: useDialog.tsx  useDrop.tsx  useModal.tsx
